# c-career-test

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: list.h  list_func.h  logger.h  main.h  msq.h  smtpData.h  smtpDispatch.h  smtpHashmap.h  smtpInit.h  smtpItcq.h  smtpMailFile.h  smtpSession.h  smtpSock.h  smtpSvr.h  smtpSvrRecvAsync.h  smtpSvrRecvEpoll.h  smtpSvrRecvFdSet.h  smtpTps.h  smtpUtils.h
src/: logger.c  msq.c  smtpDispatch.c  smtpHashmap.c  smtpInit.c  smtpItcq.c  smtpMailFile.c  smtpSession.c  smtpSock.c  smtpSvr.c  smtpSvrRecvAsync.c  smtpSvrRecvEpoll.c  smtpSvrRecvFdSet.c  smtpTps.c  smtpUtils.c
utils/: send_mail.py
